prevent wrapping of keyboard shortcuts

--- a/css/includes/_base.scss
+++ b/css/includes/_base.scss
@@ -306,3 +306,7 @@ table {
     background-color: $color-contrast-light;
     color: $dark;
 }
+
+kbd {
+    white-space: nowrap;
+}
